# MCP-ANDROID

./: .gitignore  LICENSE  package-lock.json  package.json
.github/workflows/: ci.yml
MCPforEmulator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  bypass.js  config.toml  default_scripts.js  pyproject.toml  requirements.txt  setup_mumu.bat
MCPforEmulator/examples/: curl_examples.sh  mcp_client.py
MCPforEmulator/src/: adb.rs  auth.rs  config.rs  error.rs  frida.rs  main.rs  metrics.rs  middleware.rs  rate_limiter.rs  rmcp_server.rs  server.rs  session.rs  tools.rs
MCPforEmulator/src/tools/: analysis.rs  device.rs  memory.rs  process.rs  script.rs
MCPforEmulator/tools/: config.json  config_loader.js  setup_frida.sh  test_connection.sh
MCPforEmulator/tools/examples/: mcp_client_example.py  test_device_operations.sh  test_mcp_connection.sh  test_memory_operations.sh
MCPforEmulator/tools/frida_scripts/: anti_debug_bypass.js  comprehensive_analysis.js  dump_strings.js  hook_database.js  hook_encryption.js  hook_file_operations.js  hook_intents.js  hook_java_methods.js  hook_native_methods.js  hook_network_operations.js  memory_pattern_search.js  ssl_pinning_bypass.js
MCPforEmulator/tools/frida_scripts/lib/: frida_helpers.js
src/: cli.ts  git-tools.ts  index.ts  memory.ts  scanner.ts  search.ts
tests/: git.test.ts  memory.test.ts  scanner.test.ts  search.test.ts  terminal.test.ts
